# bitmemeweb

./: .env  .env.example  README.md  package-lock.json  package.json  schema.sql  supabase.sql
backend/: go.mod  go.sum  main.go
backend/config/: blockchain.js  juno.go  redis.env
backend/contracts/token/: Cargo.toml  Dockerfile  README.md  btm.rs  croncat-task.json
backend/contracts/token/src/: lib.rs
backend/handlers/: click.go
backend/middleware/: ratelimit.go
backend/redis/: redis.go
backend/services/cosmos/: client.go
cli/: .env.example  README.md  check-balance.ts  check-testnet-balance.ts  package-lock.json  package.json  request-testnet-tokens.ts
cli/src/: index.js
frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/assets/images/: README.md
frontend/src/assets/sounds/: README.md
frontend/src/components/: CryptoTicker.vue  Header.vue
frontend/src/components/token/: BurnButton.vue  plaintext
frontend/src/services/: geolocation.js  supabase.js
frontend/src/services/blockchain/: balances.js  config.ts  faucet.js  junoService.ts  networks.js
frontend/src/views/: About.vue  Home.vue  Wallet.vue
scripts/: deploy-testnet.ts  get-testnet-tokens.ts
src/: App.vue
src/services/: geolocation.js  supabase.js
