[package]
name = "btm-token"
version = "0.1.0"
authors = ["BTM Team"]
edition = "2021"
description = "BTM Token Smart Contract with burn mechanics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtrace = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.5.0" }
cosmwasm-storage = { version = "1.5.0" }
cw-storage-plus = { version = "1.2.0" }
cw20 = { version = "1.1.2" }
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
cosmwasm-schema = "1.5.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true